# Small-Metacognitive-LLM

./: .gitignore  .pre-commit-config.yaml  =13.4  GITHUB_IDENTITY.txt  README.md  bandit.yaml  conftest.py  metacog_heads.py  pyproject.toml  requirements.txt  run1.json  run_all_layers.json  serve.py  side_adapters.py  tina_chat_introspective.py  tina_chat_local.py  tmp.jsonl  tokenizer_utils.py  train_config.yaml  training_pipeline_report.md
coder_info/: Tina_Metacog_Integration_Guide_V1.md  Tina_metacog_integration_V2.md  plan.md  project_goals.md  repo_state_report.md  training_pipeline_appendix.md  training_pipeline_report.md
config/: service_config.json
data/: train.jsonl
docs/: DATA_SPEC.md  Training_specification_summary.md  dataloading.md  self_play_azr.md  tina-project-summary.txt  tina_training_architect_instruction.yaml
eval/: light_eval.py
schemas/: activation_log.schema.json  adapter_config.schema.json  generation_config.schema.json  observe_infer.schema.json  service_config.schema.json
scripts/: configure_git_identity.sh
tests/: conftest.py  test_acceptance_budget_leakage.py  test_adapters_concurrency.py  test_adapters_gate.py  test_answer_f1.py  test_answer_invariance.py  test_banner_exists.py  test_budget_curriculum.py  test_budget_stop.py  test_calibration_blob_extend.py  test_calibration_ece.py  test_calibration_metrics.py  test_checkpoint_saving.py  test_confidence_temperature_apply.py  test_config_and_tokenizer_ids.py  test_config_ids.py  test_config_parity.py  test_config_validation.py  test_cot_assembly.py  test_dataset_contract.py  (+54 more)
(+49 files in other folders)
