[tool.ruff]
target-version = "py311"
line-length = 120
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "C4", # comprehensions
  "UP", # pyupgrade
  "SIM",# flake8-simplify
  "ANN",# annotations (lightweight)
  "RUF",# ruff-specific
]
ignore = [
  "ANN101",  # missing type self
  "ANN102",  # missing type cls
]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
exclude = [
  "^model/",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
  "tests",
]
addopts = "-q"
filterwarnings = [
  # Torch occasionally emits size mismatch warnings during Huber on scalars in tests; keep noise low
  "ignore:Using a target size.*different to the input size.*:UserWarning",
]
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tina-introspective"
version = "0.0.0"
description = "Local introspective CoT training/eval tooling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "jsonschema>=4; python_version>='3.10'",
  "ruff>=0.5",
  "mypy>=1.7",
]
